# ComfyUI-Subtitle-Effects

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
core/: compositor.py  easing.py  srt_parser.py  subtitle_data.py  text_engine.py  utils.py
fonts/: README.md  README.txt  download_fonts.sh  download_fonts_2.sh
four_line_flip_subtitles/: README.md  __init__.py  four_line_flip_node.py
nodes/: effect_01_spring_pop.py  effect_02_cascade_scroller.py  effect_03_speed_stretch.py  replace_subtitle.py  source_subtitle.py
